internal/xds/translator/testdata/out/xds-ir/oidc-backend-cluster-provider.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        path: baz
      name: first-route
      route:
        cluster: third-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.oauth2:
          '@type': type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2PerRoute
          config:
            authScopes:
            - openid
            authType: BASIC_AUTH
            authorizationEndpoint: https://oauth.foo.com/oauth2/v2/auth
            credentials:
              clientId: client1.apps.googleusercontent.com
              cookieNames:
                bearerToken: AccessToken-b0a1b740
                codeVerifier: OauthCodeVerifier-b0a1b740
                idToken: IdToken-b0a1b740
                oauthExpires: OauthExpires-b0a1b740
                oauthHmac: OauthHMAC-b0a1b740
                oauthNonce: OauthNonce-b0a1b740
                refreshToken: RefreshToken-b0a1b740
              hmacSecret:
                name: oauth2/hmac_secret/securitypolicy/envoy-gateway/policy-for-gateway
                sdsConfig:
                  ads: {}
                  initialFetchTimeout: 0s
                  resourceApiVersion: V3
              tokenSecret:
                name: oauth2/client_secret/securitypolicy/envoy-gateway/policy-for-gateway
                sdsConfig:
                  ads: {}
                  initialFetchTimeout: 0s
                  resourceApiVersion: V3
            defaultExpiresIn: 1800s
            defaultRefreshTokenExpiresIn: 86400s
            forwardBearerToken: true
            redirectPathMatcher:
              path:
                exact: /bar/oauth2/callback
            redirectUri: https://www.example.com/bar/oauth2/callback
            retryPolicy:
              numRetries: 3
              retryBackOff:
                baseInterval: 0.500s
                maxInterval: 5s
              retryOn: 5xx,gateway-error,reset
            signoutPath:
              path:
                exact: /bar/logout
            statPrefix: securitypolicy/envoy-gateway/policy-for-gateway
            tokenEndpoint:
              cluster: securitypolicy/envoy-gateway/policy-for-gateway/0
              timeout: 5s
              uri: https://oauth.foo.com/token
            useRefreshToken: true
